--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -161,9 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wget in /workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages (3.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# IMport dataset with public ground truth\n",
     "%pip install wget\n",
@@ -744,24 +753,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_gif_from_folder(folder_path, duration=100, loop=0):\n",
-    "    gif_file = os.path.join(folder_path, f\"{os.path.basename(folder_path)}.gif\")\n",
-    "\n",
+    "    gif_file = os.path.join(os.getcwd()+'/gifs/', f\"{os.path.basename(folder_path)}.gif\")\n",
+    "    #print(gif_file)\n",
     "    images = []\n",
     "    png_files = sorted([f for f in os.listdir(folder_path) if f.endswith('.png')])\n",
     "\n",
@@ -775,8 +773,8 @@
     "\n",
     "\n",
     "# Example usage\n",
-    "folder_path = '/workspace/VC/assignment2/dataset/other-data/Urban2'\n",
-    "create_gif_from_folder(folder_path, duration=200, loop=3)\n"
+    "#folder_path = '/workspace/VC/assignment2/dataset/other-data/Urban2'\n",
+    "#create_gif_from_folder(folder_path, duration=200, loop=3)\n"
    ]
   },
   {
@@ -789,58 +787,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folders that have a ground truth to evaluate:['Dimetrodon', 'Venus', 'Grove3', 'Urban3', 'RubberWhale', 'Hydrangea', 'Urban2', 'Grove2']\n",
-      "          Name                                             Source Processed   \n",
-      "1   Dimetrodon  ![source](/workspace/VC/assignment2/dataset/ot...       yes  \\\n",
-      "2        Venus  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "3       Grove3  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "4       Urban3  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "5  RubberWhale  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "6    Hydrangea  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "7       Urban2  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "8       Grove2  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
-      "\n",
-      "  Average Angular Error                                  Std Angular Error   \n",
-      "1                30days  ![source](/workspace/VC/assignment2/dataset/ot...  \\\n",
-      "2                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "3                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "4                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "5                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "6                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "7                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "8                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
-      "\n",
-      "  Average Endpoint Error Std Endpoint Error  \n",
-      "1                    yes             30days  \n",
-      "2                    yes             30days  \n",
-      "3                    yes             30days  \n",
-      "4                    yes             30days  \n",
-      "5                    yes             30days  \n",
-      "6                    yes             30days  \n",
-      "7                    yes             30days  \n",
-      "8                    yes             30days  \n"
+      "Folders that have a ground truth to evaluate:['Dimetrodon', 'Venus', 'Grove3', 'Urban3', 'RubberWhale', 'Hydrangea', 'Urban2', 'Grove2']\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "| Name        | Source                                                                              | Processed   | Average Angular Error   | Std Angular Error                                                                   | Average Endpoint Error   | Std Endpoint Error   |\n",
-       "|:------------|:------------------------------------------------------------------------------------|:------------|:------------------------|:------------------------------------------------------------------------------------|:-------------------------|:---------------------|\n",
-       "| Dimetrodon  | ![source](/workspace/VC/assignment2/dataset/other-data/Dimetrodon/Dimetrodon.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Dimetrodon/Dimetrodon.gif)   | yes                      | 30days               |\n",
-       "| Venus       | ![source](/workspace/VC/assignment2/dataset/other-data/Venus/Venus.gif)             | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Venus/Venus.gif)             | yes                      | 30days               |\n",
-       "| Grove3      | ![source](/workspace/VC/assignment2/dataset/other-data/Grove3/Grove3.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Grove3/Grove3.gif)           | yes                      | 30days               |\n",
-       "| Urban3      | ![source](/workspace/VC/assignment2/dataset/other-data/Urban3/Urban3.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Urban3/Urban3.gif)           | yes                      | 30days               |\n",
-       "| RubberWhale | ![source](/workspace/VC/assignment2/dataset/other-data/RubberWhale/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/RubberWhale/RubberWhale.gif) | yes                      | 30days               |\n",
-       "| Hydrangea   | ![source](/workspace/VC/assignment2/dataset/other-data/Hydrangea/Hydrangea.gif)     | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Hydrangea/Hydrangea.gif)     | yes                      | 30days               |\n",
-       "| Urban2      | ![source](/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif)           | yes                      | 30days               |\n",
-       "| Grove2      | ![source](/workspace/VC/assignment2/dataset/other-data/Grove2/Grove2.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Grove2/Grove2.gif)           | yes                      | 30days               |"
+       "# LucasKanade Results\n",
+       "\n",
+       "| Name        | Source                                                    | Processed   | Average Angular Error   | Std Angular Error                                         | Average Endpoint Error   | Std Endpoint Error   |\n",
+       "|:------------|:----------------------------------------------------------|:------------|:------------------------|:----------------------------------------------------------|:-------------------------|:---------------------|\n",
+       "| Dimetrodon  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
+       "| Venus       | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
+       "| Grove3      | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
+       "| Urban3      | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
+       "| RubberWhale | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes                      | 30days               |\n",
+       "| Hydrangea   | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes                      | 30days               |\n",
+       "| Urban2      | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes                      | 30days               |\n",
+       "| Grove2      | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes                      | 30days               |\n",
+       "\n",
+       "\n",
+       "# HornShunck Results\n",
+       "\n",
+       "| Name        | Source                                                    | Processed   | Average Angular Error   | Std Angular Error                                         | Average Endpoint Error   | Std Endpoint Error   |\n",
+       "|:------------|:----------------------------------------------------------|:------------|:------------------------|:----------------------------------------------------------|:-------------------------|:---------------------|\n",
+       "| Dimetrodon  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
+       "| Venus       | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
+       "| Grove3      | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
+       "| Urban3      | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
+       "| RubberWhale | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes                      | 30days               |\n",
+       "| Hydrangea   | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes                      | 30days               |\n",
+       "| Urban2      | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes                      | 30days               |\n",
+       "| Grove2      | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes                      | 30days               |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -868,7 +853,8 @@
     "\n",
     "    paths_to_evalutate = find_common_folders('/dataset/other-data/','/dataset/other-gt-flow/')\n",
     "\n",
-    "    results_df = pd.DataFrame(columns=['Name','Source', 'Processed', 'Average Angular Error','Std Angular Error', 'Average Endpoint Error','Std Endpoint Error'])\n",
+    "    lk_df = pd.DataFrame(columns=['Name','Source', 'Processed', 'Average Angular Error','Std Angular Error', 'Average Endpoint Error','Std Endpoint Error'])\n",
+    "    hs_df = pd.DataFrame(columns=['Name','Source', 'Processed', 'Average Angular Error','Std Angular Error', 'Average Endpoint Error','Std Endpoint Error'])\n",
     "    \n",
     "    # Iterate through the function calls and store the results\n",
     "    for i, path, in enumerate(paths_to_evalutate):\n",
@@ -876,12 +862,11 @@
     "        # Add the function name and result to the dataframe\n",
     "        source_gif = f\"![source]({create_gif_from_folder(source_path, duration=100, loop=3)})\"\n",
     "\n",
-    "        results_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
-    "               \n",
+    "        lk_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
+    "        hs_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
     "\n",
-    "    print(results_df)\n",
     "    #Display the results as a markdown table\n",
-    "    display(Markdown(results_df.to_markdown(index=False)))\n",
+    "    display(Markdown('# LucasKanade Results\\n\\n'+lk_df.to_markdown(index=False)+'\\n\\n\\n# HornShunck Results\\n\\n'+hs_df.to_markdown(index=False)))\n",
     "\n",
     "display_results()"
    ]
