--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -804,10 +804,10 @@
        "\n",
        "| Name        | Source                                                    | Processed   | Average Angular Error   | Std Angular Error                                         | Average Endpoint Error   | Std Endpoint Error   |\n",
        "|:------------|:----------------------------------------------------------|:------------|:------------------------|:----------------------------------------------------------|:-------------------------|:---------------------|\n",
-       "| Dimetrodon  | ![source](/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
-       "| Venus       | ![source](/assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
-       "| Grove3      | ![source](/assignment2/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
-       "| Urban3      | ![source](/assignment2/gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
+       "| Dimetrodon  | ![source](VC/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
+       "| Venus       | ![source](assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
+       "| Grove3      | ![source](/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
+       "| Urban3      | ![source](gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
        "| RubberWhale | ![source](/assignment2/gifs/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes                      | 30days               |\n",
        "| Hydrangea   | ![source](/assignment2/gifs/Hydrangea.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes                      | 30days               |\n",
        "| Urban2      | ![source](/assignment2/gifs/Urban2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes                      | 30days               |\n",
