--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -753,10 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import base64\n",
     "def create_gif_from_folder(folder_path, duration=100, loop=0):\n",
     "    gif_file = os.path.join(os.getcwd()+'/gifs/', f\"{os.path.basename(folder_path)}.gif\")\n",
     "    #print(gif_file)\n",
@@ -770,6 +771,15 @@
     "\n",
     "    images[0].save(gif_file, save_all=True, append_images=images[1:], format='GIF', duration=duration, loop=loop)\n",
     "    return gif_file\n",
+    "\n",
+    "def gif_to_html_image(gif_file):\n",
+    "    with open(gif_file, 'rb') as f:\n",
+    "        gif_data = f.read()\n",
+    "\n",
+    "    base64_data = base64.b64encode(gif_data).decode('utf-8')\n",
+    "    html_image = f'<img src=\"data:image/gif;base64,{base64_data}\" />'\n",
+    "\n",
+    "    return html_image\n",
     "\n",
     "\n",
     "# Example usage\n",
@@ -787,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -796,48 +806,12 @@
      "text": [
       "Folders that have a ground truth to evaluate:['Dimetrodon', 'Venus', 'Grove3', 'Urban3', 'RubberWhale', 'Hydrangea', 'Urban2', 'Grove2']\n"
      ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "# LucasKanade Results\n",
-       "\n",
-       "| Name        | Source                                                    | Processed   | Average Angular Error   | Std Angular Error                                         | Average Endpoint Error   | Std Endpoint Error   |\n",
-       "|:------------|:----------------------------------------------------------|:------------|:------------------------|:----------------------------------------------------------|:-------------------------|:---------------------|\n",
-       "| Dimetrodon  | ![source](VC/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
-       "| Venus       | ![source](assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
-       "| Grove3      | ![source](/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
-       "| Urban3      | ![source](gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
-       "| RubberWhale | ![source](/assignment2/gifs/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes                      | 30days               |\n",
-       "| Hydrangea   | ![source](/assignment2/gifs/Hydrangea.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes                      | 30days               |\n",
-       "| Urban2      | ![source](/assignment2/gifs/Urban2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes                      | 30days               |\n",
-       "| Grove2      | ![source](/assignment2/gifs/Grove2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes                      | 30days               |\n",
-       "\n",
-       "\n",
-       "# HornShunck Results\n",
-       "\n",
-       "| Name        | Source                                                    | Processed   | Average Angular Error   | Std Angular Error                                         | Average Endpoint Error   | Std Endpoint Error   |\n",
-       "|:------------|:----------------------------------------------------------|:------------|:------------------------|:----------------------------------------------------------|:-------------------------|:---------------------|\n",
-       "| Dimetrodon  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Dimetrodon.gif)  | yes                      | 30days               |\n",
-       "| Venus       | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Venus.gif)       | yes                      | 30days               |\n",
-       "| Grove3      | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove3.gif)      | yes                      | 30days               |\n",
-       "| Urban3      | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban3.gif)      | yes                      | 30days               |\n",
-       "| RubberWhale | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/RubberWhale.gif) | yes                      | 30days               |\n",
-       "| Hydrangea   | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Hydrangea.gif)   | yes                      | 30days               |\n",
-       "| Urban2      | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Urban2.gif)      | yes                      | 30days               |\n",
-       "| Grove2      | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes         | 30days                  | ![source](/workspace/VC/assignment2/gifs/Grove2.gif)      | yes                      | 30days               |"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from IPython.display import display, Markdown\n",
+    "\n",
     "\n",
     "def find_common_folders(folder1, folder2):\n",
     "    folders1 = set(os.listdir(os.getcwd()+folder1))\n",
@@ -860,8 +834,8 @@
     "    for i, path, in enumerate(paths_to_evalutate):\n",
     "        source_path = os.getcwd()+'/dataset/other-data/'+path\n",
     "        # Add the function name and result to the dataframe\n",
-    "        source_gif = f\"![source]({create_gif_from_folder(source_path, duration=100, loop=3)})\"\n",
-    "\n",
+    "        #source_gif = f\"![source]({create_gif_from_folder(source_path, duration=100)})\"\n",
+    "        source_gif = gif_to_html_image(create_gif_from_folder(source_path, duration=100))\n",
     "        lk_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
     "        hs_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
     "\n",
