--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -1027,6 +1027,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Not Finished unfortunately :(\n",
+    "\n",
     "import pandas as pd\n",
     "from IPython.display import display, Markdown\n",
     "\n",
